<resources>
    <string name="app_name">Lab</string>
    <string name="title_activity_buttons">ButtonsActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

    <string name="mammals">Млекопитающие</string>
    <string name="birds">Птицы</string>
    <string name="open_buttons_activity">Открыть активность\n с кнопками</string>
    <string name="open_view_pager_activity">Открыть активность\n с пагинатором</string>
    <string name="this_is_formatter" formatted="false">Не поверите, но это %s</string>
    <string name="you_can">Введите комментарий</string>
    <string name="traffic">Светофор</string>
    <string name="converter">Конвертер</string>
    <string name="spinner">Spinner</string>
    <string name="browser">Browser</string>
    <string name="life">Жизненный цикл</string>
    <string name="from_gallery">Галерея</string>
    <string name="from_web">Веб</string>
    <string name="from_resource">Ресурсы</string>
    <string name="selected">Выбран</string>

    <string name="red">Красный</string>
    <string name="yellow">Жёлтый</string>
    <string name="green">Зелёный</string>


    <string name="rubles">В рублях</string>
    <string name="dollars">В долларах</string>
    <string name="buttonConvert_text">Конвертировать</string>
    <string name="enter_convertible_unit">Введите конвертируемую единицу</string>
    <string name="converted_value_rub_cop" formatted="false">Конвертированное значение: %d руб. %d коп.</string>
    <string name="converted_value_usd_cent" formatted="false">Конвертированное значение: %d usd %d cent</string>
    <string name="number_of_characters_entered">Возможно ввести только 8 символов</string>

    <string-array name="page_titles">
        <item>Млекопитающие</item>
        <item>Птицы</item>
        <item>Насекомые</item>
        <item>Земноводные</item>
        <item>Рыбы</item>
        <item>Пресмыкающиеся</item>
    </string-array>

    <string name="comment">Введите ваш комментарий</string>

</resources>
